--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="button_search">SEARCH</string>
     <string name="button_clear">CLEAR</string>
 
+    <string name="resultActivityLabel">Search results</string>
+
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
 </resources>
