add property Context to PlaceAdapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="google_geo_api_key">AIzaSyDnrHxhQ8T39Wy-l63kWgtreAiG1EjKanM</string>
+    <string name="preference_file_key">com.example.lizi.place_search.favorites_preference_file</string>
     <string name="app_name">Places Search</string>
     <string name="main_tab_text_1">Search</string>
     <string name="main_tab_text_2">Favorites</string>
